--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@uppy/aws-s3": "^1.5.2",
     "@uppy/core": "^1.8.2",
     "@uppy/dashboard": "^1.6.2",
+    "@uppy/file-input": "^1.4.5",
     "@uppy/google-drive": "^1.4.2",
     "@uppy/react": "^1.4.6",
     "@uppy/store-redux": "^1.2.1",
     "@uppy/tus": "^1.5.5",
     "@uppy/webcam": "^1.5.5",
+    "@uppy/xhr-upload": "^1.5.2",
     "final-form": "^4.18.6",
     "final-form-arrays": "^3.0.2",
     "react": "^16.11.0",
